--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
-spring.datasource.url=jdbc:h2:mem:fadesp
-spring.datasource.username=fadesp
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.path=/h2
+# Configuração para o banco de dados H2
+#spring.datasource.url=jdbc:h2:mem:fadesp
+#spring.datasource.username=fadesp
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.path=/h2
+
+
+# Configuração para o banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/fadesp?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
