--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/fadesp?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456789
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
